--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.*",
+    "gulp-clean-css": "^2.0.13",
     "gulp-cssbeautify": "^0.1.3",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.*",
     "gulp-sourcemaps": "^1.6.*"
   }
