--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,6 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass": "bootstrap-sass-official#^3.3.7",
-    "font-awesome": "fontawesome#^4.6.3"
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.7"
   }
 }
