--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "Repository to manage Marketo styles",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.*",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-cssbeautify": "^0.1.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.*",
-    "gulp-sourcemaps": "^1.6.*"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
